# gnc3d-backend

./: .env  Cargo.toml  main.sh
src/: constants.rs  main.rs  server.rs  session.rs
