[package]
name = "gnc3d_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", default-features = false, features = ["io-util", "macros", "time", "sync", "net", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.20.0", default-features = false, features = ["handshake"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
hyper = { version = "0.14.25", default-features = false, features = ["http1", "server", "tcp"] }
url = "*"
sysinfo = "0.29.8"